Use replacement for deprecated Class.newInstance() calls.